# simplex-volume

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
src/simplex/: simplex.h
